Fixed one spelling mistake on the lab7 assignment.

--- a/labs/lab7/cs380F2014-lab7.tex
+++ b/labs/lab7/cs380F2014-lab7.tex
@@ -47,7 +47,7 @@ assignment.
 
 Make sure that both team members are able to compile and run the current version of the ``{\tt
   StorageAndRetrievalBenchmark.java}'' program. What output does it produce right now? What is the meaning of this
-output? You should note that the provide Java archive (JAR) files are older versions of XStream; interested students may
+output? You should note that the provided Java archive (JAR) files are older versions of XStream; interested students may
 investigate the downloading and installation of the version of this library that was released in February of 2014.
 However, the benchmarks should work correctly with a slightly older version of XStream. Please see the course instructor
 if you are not able to compile and run this preliminary version of the benchmarks.
