Added in the requirement to turn in the source code for the lab6.

--- a/labs/lab6/cs380F2014-lab6.tex
+++ b/labs/lab6/cs380F2014-lab6.tex
@@ -16,7 +16,7 @@ Chapter 5 of your textbook introduces advanced concepts in the structure query l
 topics like accessing a database from a programming language. In this laboratory assignment, you will leverage the
 example in Figure 5.1 of the textbook to ultimately implement your own database-centric application based on a schema
 that you visualized and manipulated in the past two assignments. In addition to using a simple Java program that uses a
-databases, you will learn more about the configuration and use of the HyperSQL database engine.
+database, you will learn more about the configuration and use of the HyperSQL database engine.
 
 \vspace*{-.05in}
 \section*{Learning About the HyperSQL Database Engine}
@@ -67,8 +67,6 @@ addition, this assignment invites your partnership to submit one printed version
 member should write and submit their own version of the first deliverable. Please see the instructor if you have
 questions about the deliverables that you must turn in for this assignment.
 
-% \vspace*{-.05in}
-
 \begin{enumerate}
     \setlength{\itemsep}{0pt}
   \item A two paragraph commentary on the work that each team member completed. 
@@ -80,6 +78,7 @@ questions about the deliverables that you must turn in for this assignment.
   \item A natural-language description of the features provided by your chosen application.
   \item An explanation of how you use the ``dynamic SQL'' method to interact with HSQLDB.
   \item A pseudo-ER diagram, produced by {\tt sqlt-graph}, of your application's relational schema.
+  \item The source code of the database application that you designed, implemented, and tested.
   \item The output from three separate runs of your database-centric application.
   \item A description of the steps that you took to ensure the correctness of your program.
   \item A reflection on the challenges that you faced when completing this laboratory assignment.
