Added another deliverable to lab4 that requires them to turn in some visualizations.

--- a/labs/lab4/cs380F2014-lab4.tex
+++ b/labs/lab4/cs380F2014-lab4.tex
@@ -84,6 +84,7 @@ these matters.
   \item A two paragraph commentary on the work that each team member completed. 
   \item An overview of how the {\tt sqlt-graph} command-line options influence the resulting diagrams.
   \item A comparison of the University visualizations from the textbook and the {\tt sqlt-graph} tool.
+  \item A representative sample of the visualizations that you produced for the provided schemas.
   \item A brief commentary on the visualizations produced for each of the provided schemas.
   \item The complete and commented SQL source code for the student-designed relational schema.
   \item The final visualization of the student-designed relational schema, as produced by {\tt sqlt-graph}.
