Fixed a few small mistakes sin the lab8 assignment.

--- a/labs/lab8/cs380F2014-lab8.tex
+++ b/labs/lab8/cs380F2014-lab8.tex
@@ -21,10 +21,10 @@ describes and explains the empirical trends that you identified.
 \vspace*{-.05in}
 \section*{Learning More About XML Parsing Methods}
 
-In addition to reviewing the aforementioned sections of your textbook---and any of relevant content in Chapter 23---you
-should study the following Web site: \url{http://www.mkyong.com/java/how-to-read-xml-file-in-java-dom-parser/}. We will
-use the simple example provided in this tutorial to start learning about how to parse an XML document.  You should also
-carefully review Oracle's tutorial, called ``Reading XML Data into a DOM'', which is available from
+In addition to reviewing the aforementioned sections of your textbook---and any other relevant content in Chapter
+23---you should study the following Web site: \url{http://www.mkyong.com/java/how-to-read-xml-file-in-java-dom-parser/}.
+We will use the simple example provided in this tutorial to start learning about how to parse an XML document.  You
+should also carefully review Oracle's tutorial, called ``Reading XML Data into a DOM'', which is available from
 \url{https://docs.oracle.com/javase/tutorial/jaxp/dom/readingXML.html}. To gain a better understanding of the different
 DOM-based solutions that are available and to ensure that you understand some fundamental trade-offs associated with
 using our chosen DOM parser, you should also read \url{https://docs.oracle.com/javase/tutorial/jaxp/dom/when.html}.
@@ -32,7 +32,7 @@ using our chosen DOM parser, you should also read \url{https://docs.oracle.com/j
 \vspace*{-.05in}
 \section*{Trying Simple DOM-Based Parsing of XML}
 
-You and your partner should create a Git repository, using Bitbucket, that you can use to complete this laboratory
+You and your partner should create a Git repository, hosted by Bitbucket, that you can use to complete this laboratory
 assignment.  To start off this project, one of you should go into the ``share'' repository for this course and run the
 ``{\tt git pull}'' command. After investigating the directories for this course, you will find the ``{\tt
   lab8/}'' directory. What files does this directory contain?  Please see the course instructor if your repository does
