--- a/labs/lab7/cs380F2014-lab7.tex
+++ b/labs/lab7/cs380F2014-lab7.tex
@@ -46,7 +46,7 @@ performance of default and XML serialization---you and your partner will add thi
 assignment.
 
 Make sure that both team members are able to compile and run the current version of the ``{\tt
-  StorageAndRetrievalBenchmark.java}'' program. What output does it produce right now? What is the meaning of this
+  StorageAndRetrievalBenchmark.java}'' program. What output does it produce? What is the meaning of this
 output? You should note that the provided Java archive (JAR) files are older versions of XStream; interested students may
 investigate the downloading and installation of the version of this library that was released in February of 2014.
 However, the benchmarks should work correctly with a slightly older version of XStream. Please see the course instructor
@@ -77,9 +77,9 @@ In addition, this assignment invites your partnership to submit one printed vers
 member should write and submit their own version of the first deliverable. Please see the instructor if you have
 questions about the deliverables that you must turn in for this assignment.
 
-\vspace*{-.05in}
+\vspace*{-.1in}
 \begin{enumerate}
-  \setlength{\itemsep}{0pt}
+  \setlength{\itemsep}{-.02pt}
   \item A two paragraph commentary on the work that each team member completed. 
   \item A description of the eXtensible markup language and its features, strengths, and weaknesses.
   \item An explanation of the default serialization method provided by the Java language.
@@ -88,7 +88,7 @@ questions about the deliverables that you must turn in for this assignment.
   \item A detailed report addressing the performance trade-offs associated with serialization.
   \item A reflection on the challenges that you faced when completing this laboratory assignment.
 \end{enumerate}
-\vspace*{-.05in}
+\vspace*{-.1in}
 
 In adherence to the Honor Code, students should complete this assignment while exclusively collaborating with the
 other member of their team. While it is appropriate for students in this class---who are not in the same team---to have
